--- a/templates/fuzzstring.html
+++ b/templates/fuzzstring.html
@@ -4,7 +4,7 @@
 <form action ="{{url_for('fuzzstring') }}" onSubmit="return validateform()" method = "POST" enctype="multipart/form-data">
     <input type="hidden" id="decide_factor" value={{decide_factor}}>
 <div class="container" id="container_class">
-    <h5>Welcome {{session_user}}</h5>
+    <h5>Welcome Guest User for demo Session</h5>
 <div class="row">
     <div class="col-md-3">
         <div class="form-group">
